Add my first post

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@ order: 2
 
   <div class="sub-header">
     <p>
-      Hey, here I just write things that I happened in my daily life, either developing or designing something.
+      here I just write things that happen in my daily life, either developing or designing something.
     </p>
   </div>
 
