--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ order: 1
 
     <h1>I'm an <strong>UX/UI designer</strong> and <strong>Front-end developer</strong> living in Florianópolis, Brazil.</h1>
 
-    <p>I currently work at Filmow (a social network of movies and series) and do consulting for CIMM (big portal of metalworking industry).</p>
+    <p>I currently work at <a href="http://www.conpass.io">Conpass</a>, a User Onboarding solution helping companies to delivery success to their customers.</p>
 
-    <p>I'm addicted to webstandards, clean websites that are easy to navigate.</p>
+    <p>I love to create things and share experiences in the community.</p>
   </div>
 </div>
